--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^1.0.3
   get: ^4.6.1
+  lottie: ^1.2.2
+  google_maps_flutter: ^2.1.1
+  flutter_polyline_points: ^1.0.0
+  location: ^4.2.0
+  
 
 dev_dependencies:
   flutter_test:
